Rota para cadastrar novo usuário criada e documentanda
