# src/routes/usuariosRoute.ts
@@ -1,6 +1,7 @@
 import express, { Request, Response } from 'express'
 
 import { UsuarioDAO } from '../database/UsuarioDAO.js'
+import { InUsuario } from '../interface/InUsuario.js'
 import { Usuario } from '../models/Usuario.js'
 
 export const usuarioRouter = express.Router()
@@ -10,13 +11,7 @@ usuarioRouter.get('/', (req: Request, res: Response) => {
 })
 
 usuarioRouter.post('/cadastrar', async (req: Request, res: Response) => {
-  const novoUsuario: {
-    nome: string,
-    cpf: string,
-    nascimento: Date,
-    sexo: string,
-    saldo:number
-  } = req.body
+  const novoUsuario: InUsuario = req.body
 
   let usuario = Usuario.build({
     nome: novoUsuario.nome, 
@@ -26,11 +21,14 @@ usuarioRouter.post('/cadastrar', async (req: Request, res: Response) => {
     saldo: novoUsuario.saldo
   })
 
-  let resultado = await UsuarioDAO.cadastrar(usuario)
+  let resultado: Usuario | any = await UsuarioDAO.cadastrar(usuario)
 
-  console.log(resultado)
-
-  res.send('Cadastrar novo usuário').status(200)
+  if(resultado instanceof Usuario){
+    res.status(201).json(resultado)
+  }
+  else {
+    res.status(400).send(resultado.name)
+  }
 })
 
 usuarioRouter.get('/buscar', (req: Request, res: Response) => {
